	(main): Call halInit, adc_init, and chSysInit (change for
	ChibiOS/RT 2.4.x).
	* src/random.h: New.
	* src/ac.c, src/bn.c, src/call-rsa.c, src/main.c: Include random.h.
	* src/openpgp.c, src/openpgp-do.c: Likewise.
	* src/configure, src/gnuk.ld.in: Add MEMORY_SIZE.
	* src/ec_p256.c: Fix call of bn256_add_uint.
	* boards/STM8S_DISCOVERY/*: Update for ChibiOS/RT 2.4.x.

	Merge ec_p256 branch.
	* src/Makefile.in: Add ECC files.
	* src/bn.h, src/bn.c: New.
	* src/jpc-ac.h, src/jpc.c: New.
	* src/ec_p256.h, src/ec_p256.c, src/ecc-cdh.c: New.
	* src/mod.h, src/mod.c, src/modp256.h, src/modp256.c: New.

2013-02-17  Niibe Yutaka  <gniibe@fsij.org>

	* chibios: New submodule for ChibioS/RT 2.4.x.
	* boards/FST_01/*: Update for ChibiOS/RT 2.4.x.
	* boards/common/mcuconf-common.h: Ditto.

	* src/chconf.h, src/halconf.h, src/Makefile.in, src/gnuk.ld.in:
	Update for ChibiOS/RT 2.4.x.

	* src/main.c, src/openpgp.c, src/usb-icc.c: Follow the change of
	ChibiOS/RT 2.4.x.
	* boards/common/board-common.c: Rename from hwinit.c.
	* src/usb_stm32f103.c: Rename from usb_lld.c.

	* src/neug.h, src/neug.h: Update NeuG 0.05.
	* src/adc_stm32f103.c, src/adc.h: New from NeuG 0.05.

	* src/random.c: Follow the change of NeuG 0.05.

2013-02-15  Niibe Yutaka  <gniibe@fsij.org>

	* Version 1.0.2.
	* src/usb_desc.c (gnukStringSerial): Updated.

2013-02-14  Niibe Yutaka  <gniibe@fsij.org>

	* test/features/002_get_data_static.feature: Value of extended
	capabilities changed.
	* test/features/402_get_data_static.feature: Ditto.
	* test/features/802_get_data_static.feature: Ditto.

	* src/openpgp.c (cmd_write_binary): Move erasing page of update
	keys to...
	(modify_binary): ...here.

	* src/flash.c (flash_write_binary): Handle removal of update keys.

2013-02-13  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (cmd_get_challenge): Handle Le field.

	* src/openpgp-do.c (extended_capabilities): Fix for GET CHALLENGE.

	* src/gnuk.h (CHALLENGE_LEN): Moved here (was: openpgp.c).
